porject dasbord mobile overflow fixed

--- a/projects/project_dashboard/css/responsive.css
+++ b/projects/project_dashboard/css/responsive.css
@@ -45,6 +45,9 @@
 }
 
 @media (max-width: 468px) {
+	html {
+		overflow-x: hidden;
+	}
 	.status-bar {
 		background-color: var(--black-darker);
 		box-shadow: 1px -1px 3px 1px var(--red-dark);
